サンプルの通りに試してみるためのやつ

--- a/appspec.yml
+++ b/appspec.yml
@@ -1,5 +1,13 @@
 version: 0.0
 os: linux
 files:
-  - source: /
-    destination: /home/ec2-user/tmp/
+  - source: src/
+    destination: /var/www/html/
+hooks:
+  BeforeInstall:
+    - location: scripts/install.sh
+      timeout: 300
+      runas: root
+    - location: scripts/httpd_start.sh
+      timeout: 300
+      runas: root
